--- a/html/components/component_datepicker.html
+++ b/html/components/component_datepicker.html
@@ -85,309 +85,11 @@
 			<h2>datepicker</h2>
 			<div class="guide-column-list">
 				<div class="input-wrap input-datepicker">
-					<button type="button" aria-label="날짜 선택" data-micromodal-trigger="modal-datepicker">2024-10</button>
-				</div>
-			</div>
-		</div>
-		<hr>
-
-		<div class="ui-guide-section">
-			<h2>datepicker</h2>
-			<div class="guide-column-list">
-				<div class="input-wrap input-datepicker">
-					<input type="button" aria-label="날짜 선택" class="selector">
+					<button type="button" aria-label="날짜 선택" data-micromodal-trigger="modal-datepicker"></button>
 				</div>
 			</div>
 		</div>
 	</div>
-
-
-	<!-- micromodal -->
-	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker" aria-hidden="true">
-		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
-			<div class="modal__container" role="dialog" aria-modal="true">
-
-				<div class="modal__header">
-					<strong class="modal__title title-large"></strong>
-					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
-				</div>
-				<div class="modal__content">
-
-					<div class="content">
-						<div class="datepicker-wrap pt16">
-							<div class="calendar-wrap">
-								<div class="swiper swiper-year">
-									<!-- Additional required wrapper -->
-									<div class="swiper-wrapper">
-										<!-- Slides -->
-										<div class="swiper-slide">
-											<strong>2023.11</strong>
-											<table class="ui-datepicker-calendar">
-												<thead>
-													<tr>
-														<th scope="col"><span>일</span></th>
-														<th scope="col"><span>월</span></th>
-														<th scope="col"><span>화</span></th>
-														<th scope="col"><span>수</span></th>
-														<th scope="col"><span>목</span></th>
-														<th scope="col"><span>금</span></th>
-														<th scope="col"><span>토</span></th>
-													</tr>
-												</thead>
-												<tbody>
-													<tr>
-														<td><button type="button">1</button></td>
-														<td><button type="button">2</button></td>
-														<td><button type="button">3</button></td>
-														<td><button type="button">4</button></td>
-														<td><button type="button">5</button></td>
-														<td><button type="button">6</button></td>
-														<td><button type="button">7</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">8</button></td>
-														<td><button type="button">9</button></td>
-														<td><button type="button">10</button></td>
-														<td><button type="button">11</button></td>
-														<td><button type="button">12</button></td>
-														<td><button type="button">13</button></td>
-														<td><button type="button">14</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">15</button></td>
-														<td><button type="button">16</button></td>
-														<td><button type="button">17</button></td>
-														<td><button type="button">18</button></td>
-														<td><button type="button">19</button></td>
-														<td><button type="button">20</button></td>
-														<td><button type="button">21</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">22</button></td>
-														<td><button type="button">23</button></td>
-														<td><button type="button">24</button></td>
-														<td><button type="button">25</button></td>
-														<td><button type="button">26</button></td>
-														<td><button type="button">27</button></td>
-														<td><button type="button">28</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">29</button></td>
-														<td><button type="button">30</button></td>
-														<td><button type="button">31</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">1</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">2</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">3</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">4</button></td>
-													</tr>
-												</tbody>
-											</table>
-										</div>
-										<div class="swiper-slide">
-											<strong>2023.11</strong>
-											<table class="ui-datepicker-calendar">
-												<thead>
-													<tr>
-														<th scope="col"><span>일</span></th>
-														<th scope="col"><span>월</span></th>
-														<th scope="col"><span>화</span></th>
-														<th scope="col"><span>수</span></th>
-														<th scope="col"><span>목</span></th>
-														<th scope="col"><span>금</span></th>
-														<th scope="col"><span>토</span></th>
-													</tr>
-												</thead>
-												<tbody>
-													<tr>
-														<td><button type="button">1</button></td>
-														<td><button type="button">2</button></td>
-														<td><button type="button">3</button></td>
-														<td><button type="button">4</button></td>
-														<td><button type="button">5</button></td>
-														<td><button type="button">6</button></td>
-														<td><button type="button">7</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">8</button></td>
-														<td><button type="button">9</button></td>
-														<td><button type="button">10</button></td>
-														<td><button type="button">11</button></td>
-														<td><button type="button">12</button></td>
-														<td><button type="button">13</button></td>
-														<td><button type="button">14</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">15</button></td>
-														<td><button type="button">16</button></td>
-														<td><button type="button">17</button></td>
-														<td><button type="button">18</button></td>
-														<td><button type="button">19</button></td>
-														<td><button type="button">20</button></td>
-														<td><button type="button">21</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">22</button></td>
-														<td><button type="button">23</button></td>
-														<td><button type="button">24</button></td>
-														<td><button type="button">25</button></td>
-														<td><button type="button">26</button></td>
-														<td><button type="button">27</button></td>
-														<td><button type="button">28</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">29</button></td>
-														<td><button type="button">30</button></td>
-														<td><button type="button">31</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">1</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">2</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">3</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">4</button></td>
-													</tr>
-												</tbody>
-											</table>
-										</div>
-										<div class="swiper-slide">
-											<strong>2023.11</strong>
-											<table class="ui-datepicker-calendar">
-												<thead>
-													<tr>
-														<th scope="col"><span>일</span></th>
-														<th scope="col"><span>월</span></th>
-														<th scope="col"><span>화</span></th>
-														<th scope="col"><span>수</span></th>
-														<th scope="col"><span>목</span></th>
-														<th scope="col"><span>금</span></th>
-														<th scope="col"><span>토</span></th>
-													</tr>
-												</thead>
-												<tbody>
-													<tr>
-														<td><button type="button">1</button></td>
-														<td><button type="button">2</button></td>
-														<td><button type="button">3</button></td>
-														<td><button type="button">4</button></td>
-														<td><button type="button">5</button></td>
-														<td><button type="button">6</button></td>
-														<td><button type="button">7</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">8</button></td>
-														<td><button type="button">9</button></td>
-														<td><button type="button">10</button></td>
-														<td><button type="button">11</button></td>
-														<td><button type="button">12</button></td>
-														<td><button type="button">13</button></td>
-														<td><button type="button">14</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">15</button></td>
-														<td><button type="button">16</button></td>
-														<td><button type="button">17</button></td>
-														<td><button type="button">18</button></td>
-														<td><button type="button">19</button></td>
-														<td><button type="button">20</button></td>
-														<td><button type="button">21</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">22</button></td>
-														<td><button type="button">23</button></td>
-														<td><button type="button">24</button></td>
-														<td><button type="button">25</button></td>
-														<td><button type="button">26</button></td>
-														<td><button type="button">27</button></td>
-														<td><button type="button">28</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">29</button></td>
-														<td><button type="button">30</button></td>
-														<td><button type="button">31</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">1</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">2</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">3</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">4</button></td>
-													</tr>
-												</tbody>
-											</table>
-										</div>
-										<div class="swiper-slide">
-											<strong>2023.11</strong>
-											<table class="ui-datepicker-calendar">
-												<thead>
-													<tr>
-														<th scope="col"><span>일</span></th>
-														<th scope="col"><span>월</span></th>
-														<th scope="col"><span>화</span></th>
-														<th scope="col"><span>수</span></th>
-														<th scope="col"><span>목</span></th>
-														<th scope="col"><span>금</span></th>
-														<th scope="col"><span>토</span></th>
-													</tr>
-												</thead>
-												<tbody>
-													<tr>
-														<td><button type="button">1</button></td>
-														<td><button type="button">2</button></td>
-														<td><button type="button">3</button></td>
-														<td><button type="button">4</button></td>
-														<td><button type="button">5</button></td>
-														<td><button type="button">6</button></td>
-														<td><button type="button">7</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">8</button></td>
-														<td><button type="button">9</button></td>
-														<td><button type="button">10</button></td>
-														<td><button type="button">11</button></td>
-														<td><button type="button">12</button></td>
-														<td><button type="button">13</button></td>
-														<td><button type="button">14</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">15</button></td>
-														<td><button type="button">16</button></td>
-														<td><button type="button">17</button></td>
-														<td><button type="button">18</button></td>
-														<td><button type="button">19</button></td>
-														<td><button type="button">20</button></td>
-														<td><button type="button">21</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">22</button></td>
-														<td><button type="button">23</button></td>
-														<td><button type="button">24</button></td>
-														<td><button type="button">25</button></td>
-														<td><button type="button">26</button></td>
-														<td><button type="button">27</button></td>
-														<td><button type="button">28</button></td>
-													</tr>
-													<tr>
-														<td><button type="button">29</button></td>
-														<td><button type="button">30</button></td>
-														<td><button type="button">31</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">1</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">2</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">3</button></td>
-														<td class="ui-datepicker-other-month"><button type="button">4</button></td>
-													</tr>
-												</tbody>
-											</table>
-										</div>
-									</div>
-								</div>
-								<div class="swiper-button-prev"></div>
-								<div class="swiper-button-next"></div>
-							</div>
-
-						</div>
-					</div>
-
-				</div>
-
-			</div>
-		</div>
-	</div>
-	<!-- //micromodal -->
-
 
 
 	<!-- micromodal -->
@@ -395,7 +97,7 @@
 		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
 			<div class="modal__container" role="dialog" aria-modal="true">
 
-				<div class="modal__header">
+				<div class="modal__header modal__header__alert">
 					<strong class="modal__title title-large"></strong>
 					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
 				</div>
@@ -444,6 +146,25 @@
 	</div>
 	<!-- //micromodal -->
 
+	<!-- micromodal -->
+	<div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker" aria-hidden="false">
+		<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+			<div class="modal__container" role="dialog" aria-modal="true">
+
+				<div class="modal__header modal__header__alert">
+					<strong class="modal__title title-large"></strong>
+					<button type="button" class="modal__close" aria-label="팝업 닫기" data-micromodal-close></button>
+				</div>
+				<div class="modal__content">
+					<div class="content">
+						<div class="jquery-datepicker"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- //micromodal -->
+
 
 	<script>
 		const newSwiper1 = new Swiper('.year .swiper', {
@@ -454,44 +175,23 @@
 				prevEl: '.year .swiper-button-prev',
 			},
 		});
-		const newSwiper2 = new Swiper('.calendar-wrap .swiper', {
-			spaceBetween: 1,
-			observer: true,
-			navigation: {
-				nextEl: '.calendar-wrap .swiper-button-next',
-				prevEl: '.calendar-wrap .swiper-button-prev',
-			},
-		});
 	</script>
 	<script>
-		// $(".selector").datepicker({
-		// 	showAnim: '',
-
-		// 	//show animation
-		// 	beforeShow: function() {
-		// 		console.log($(this).datepicker("widget"))
-		// 		$(this).datepicker("widget").closest('.micromodal-slide').addClass("is-open").attr({
-		// 			'aria-hidden': 'false'
-		// 		});
-		// 	},
-		// 	// close animation
-		// 	onClose: function() {
-		// 		$(this).datepicker("widget").closest('.micromodal-slide').removeClass("is-open").attr({
-		// 			'aria-hidden': 'true'
-		// 		});
-		// 	}
-		// }).datepicker(
-		// 	//Before init
-		// 	$(this).datepicker("widget").wrap(`
-		//         <div class="micromodal-slide micromodal-slide-bottom modal" id="modal-datepicker-year" aria-hidden="true">
-		//             <div class="modal__overlay" tabindex="-1" data-micromodal-close="">
-		//                 <div class="modal__container" role="dialog" aria-modal="true">
-		//     `)
-		// );
-		$(".selector").datepicker({
-			showOptions: {
-				direction: "down"
-			}
+		$(".jquery-datepicker").datepicker({
+			dateFormat: 'yy-mm-dd',
+			prevText: '이전 달',
+			nextText: '다음 달',
+			monthNames: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
+			monthNamesShort: ['1월', '2월', '3월', '4월', '5월', '6월', '7월', '8월', '9월', '10월', '11월', '12월'],
+			dayNames: ['일', '월', '화', '수', '목', '금', '토'],
+			dayNamesShort: ['일', '월', '화', '수', '목', '금', '토'],
+			dayNamesMin: ['일', '월', '화', '수', '목', '금', '토'],
+			showMonthAfterYear: true,
+			yearSuffix: '년',
+			// minDate: 0,
+			showButtonPanel: true,
+			closeText: "닫기",
+			showOtherMonths: true
 		});
 	</script>
 </body>
