--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -265,6 +265,20 @@
 				</div>
 			</div>
 			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-won</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-won bg-black-88"></i>
+					<i class="icon-only icon-36 icon-won bg-black-88"></i>
+					<i class="icon-only icon-32 icon-won bg-black-88"></i>
+					<i class="icon-only icon-28 icon-won bg-black-88"></i>
+					<i class="icon-only icon-24 icon-won bg-black-88"></i>
+					<i class="icon-only icon-20 icon-won bg-black-88"></i>
+					<i class="icon-only icon-14 icon-won bg-black-88"></i>
+					<i class="icon-only icon-12 icon-won bg-black-88"></i>
+				</div>
+			</div>
+			<hr>
 
 		</div>
 	</div>
