--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -85,6 +85,16 @@
 					</dd>
 				</dl>
 				<dl>
+					<dt>Default</dt>
+					<dd>
+						<div class="form">
+							<div class="input-wrap">
+								<input type="text" placeholder="Placeholder" aria-label="input">
+							</div>
+						</div>
+					</dd>
+				</dl>
+				<dl>
 					<dt>Value</dt>
 					<dd>
 						<div class="form">
@@ -197,19 +207,17 @@
 					<dt>inner label</dt>
 					<dd>
 						<div class="form">
-							<div class="form">
-								<div class="label">예치금액 <span class="right">5억5000만원</span></div>
-								<div class="input-wrap input-placeholder">
-									<input type="number" class="ar" placeholder="금액입력" aria-label="예치금액">
-									<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
-									<div class="visible-placeholder">원</div>
-								</div>
-								<div class="shortcut-button-wrap">
-									<button type="button" class="btn-xsmall btn-outlined btn-round">+100만</button>
-									<button type="button" class="btn-xsmall btn-outlined btn-round">+500만</button>
-									<button type="button" class="btn-xsmall btn-outlined btn-round">+1천만</button>
-									<button type="button" class="btn-xsmall btn-outlined btn-round">+5천만</button>
-								</div>
+							<div class="label">예치금액 <span class="right">5억5000만원</span></div>
+							<div class="input-wrap input-placeholder">
+								<input type="number" class="ar" placeholder="금액입력" aria-label="예치금액">
+								<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
+								<div class="visible-placeholder">원</div>
+							</div>
+							<div class="shortcut-button-wrap">
+								<button type="button" class="btn-xsmall btn-outlined btn-round">+100만</button>
+								<button type="button" class="btn-xsmall btn-outlined btn-round">+500만</button>
+								<button type="button" class="btn-xsmall btn-outlined btn-round">+1천만</button>
+								<button type="button" class="btn-xsmall btn-outlined btn-round">+5천만</button>
 							</div>
 						</div>
 					</dd>
