--- a/html/components/component_group.html
+++ b/html/components/component_group.html
@@ -146,7 +146,7 @@
 				<div class="group-form mt40">
 					<div class="group-title">
 						<strong class="title-medium">자격증</strong>
-						<p class="description info body-small">최대 <span class="fc-status-error">N</span>개 선택할 수 있습니다.</p>
+						<!-- <p class="description info body-small">최대 <span class="fc-status-error">N</span>개 선택할 수 있습니다.</p> -->
 					</div>
 					<div class="group-content">
 						<div class="inp-column-list">
